# weekly-report

./: .gitignore  README.md  plan.md
backend/: alembic.ini  pyproject.toml  seed.py  seed_0504.py
backend/alembic/: env.py
backend/alembic/versions/: 28f0ebd97beb_remove_lowlights_add_highlight_.py  5bd337b95c86_create_initial_tables.py  99aac2a8f948_add_item_fields_to_highlights_lowlights.py  a1b2c3d4e5f6_add_highlight_media_table.py  b2c3d4e5f6a7_migrate_link_to_media.py
backend/app/: config.py  data.py  database.py  main.py  models.py  schemas.py
backend/app/routes/: admin.py  kpi.py  kpis.py  weeks.py
docs/plans/: 2026-05-15-weekly-report-full.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  routeTree.gen.ts
frontend/src/api/: client.ts
frontend/src/components/: KpiDetail.tsx  TrendChart.tsx  WeekSelector.tsx
frontend/src/hooks/: useTheme.ts
frontend/src/routes/: __root.tsx  index.tsx
frontend/src/routes/admin/: index.tsx
