[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.102.0",
    "cachetools>=7.1.1",
    "fastapi>=0.136.1",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.28",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]
